// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Table::HeaderCell default cell 1`] = `
<td>
  <div>
    <div
      className="cell-wrapper"
    >
      <ActionsComponent
        selectedItemsIds={
          Immutable.List [
          ]
        }
        view={
          Immutable.Map {
          }
        }
      />
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell last cell 1`] = `
<td>
  <div>
    <div
      className="cell-wrapper"
    >
      <ActionsComponent
        selectedItemsIds={
          Immutable.List [
          ]
        }
        view={
          Immutable.Map {
          }
        }
      />
    </div>
    <Connect(ShowMoreFieldsDropdown)
      config={
        Immutable.Map {
          mainField: "details",
          cell: [Function],
          plural: "tickets",
          newView: [Function],
          routeList: "tickets",
          name: "ticket",
          searchView: [Function],
          singular: "ticket",
          fields: Immutable.List [
            Immutable.Map {
              name: "details",
              title: "Details",
            },
            Immutable.Map {
              name: "subject",
              title: "Subject",
            },
            Immutable.Map {
              name: "integrations",
              title: "Integrations",
              path: "messages.integration_id",
              filter: Immutable.Map {
                type: "integration",
              },
              dropdown: Immutable.Map {
                width: "350px",
              },
            },
            Immutable.Map {
              name: "tags",
              title: "Tags",
              path: "tags.name",
              filter: Immutable.Map {
                type: "tag",
              },
            },
            Immutable.Map {
              name: "requester",
              title: "Requester",
              path: "requester.id",
              filter: Immutable.Map {
                type: "user",
              },
            },
            Immutable.Map {
              name: "assignee",
              title: "Assignee",
              path: "assignee_user.id",
              filter: Immutable.Map {
                type: "agent",
              },
            },
            Immutable.Map {
              name: "status",
              title: "Status",
              filter: Immutable.Map {
                enum: Immutable.List [
                  "open",
                  "closed",
                ],
              },
            },
            Immutable.Map {
              name: "channel",
              title: "Channel",
              filter: Immutable.Map {
                enum: Immutable.List [
                  "email",
                  "phone",
                  "sms",
                  "chat",
                  "twitter",
                  "facebook",
                  "facebook-messenger",
                  "api",
                ],
              },
            },
            Immutable.Map {
              name: "created",
              title: "Created",
              path: "created_datetime",
              filter: Immutable.Map {
                sort: Immutable.Map {
                  created_datetime: "desc",
                },
              },
            },
            Immutable.Map {
              name: "updated",
              title: "Updated",
              path: "updated_datetime",
              filter: Immutable.Map {
                sort: Immutable.Map {
                  updated_datetime: "desc",
                },
              },
            },
          ],
          api: "tickets",
          type: "ticket-list",
          routeItem: "ticket",
        }
      }
      fields={
        Immutable.List [
          Immutable.Map {
            name: "details",
            title: "Details",
          },
          Immutable.Map {
            name: "subject",
            title: "Subject",
          },
          Immutable.Map {
            name: "integrations",
            title: "Integrations",
            path: "messages.integration_id",
            filter: Immutable.Map {
              type: "integration",
            },
            dropdown: Immutable.Map {
              width: "350px",
            },
          },
          Immutable.Map {
            name: "tags",
            title: "Tags",
            path: "tags.name",
            filter: Immutable.Map {
              type: "tag",
            },
          },
          Immutable.Map {
            name: "requester",
            title: "Requester",
            path: "requester.id",
            filter: Immutable.Map {
              type: "user",
            },
          },
          Immutable.Map {
            name: "assignee",
            title: "Assignee",
            path: "assignee_user.id",
            filter: Immutable.Map {
              type: "agent",
            },
          },
          Immutable.Map {
            name: "status",
            title: "Status",
            filter: Immutable.Map {
              enum: Immutable.List [
                "open",
                "closed",
              ],
            },
          },
          Immutable.Map {
            name: "channel",
            title: "Channel",
            filter: Immutable.Map {
              enum: Immutable.List [
                "email",
                "phone",
                "sms",
                "chat",
                "twitter",
                "facebook",
                "facebook-messenger",
                "api",
              ],
            },
          },
          Immutable.Map {
            name: "created",
            title: "Created",
            path: "created_datetime",
            filter: Immutable.Map {
              sort: Immutable.Map {
                created_datetime: "desc",
              },
            },
          },
          Immutable.Map {
            name: "updated",
            title: "Updated",
            path: "updated_datetime",
            filter: Immutable.Map {
              sort: Immutable.Map {
                updated_datetime: "desc",
              },
            },
          },
        ]
      }
      visibleFields={
        Immutable.List [
          Immutable.Map {
            name: "details",
            title: "Details",
          },
          Immutable.Map {
            name: "subject",
            title: "Subject",
          },
          Immutable.Map {
            name: "integrations",
            title: "Integrations",
            path: "messages.integration_id",
            filter: Immutable.Map {
              type: "integration",
            },
            dropdown: Immutable.Map {
              width: "350px",
            },
          },
        ]
      }
    />
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell not main field cell 1`] = `
<td>
  <div>
    <div
      className="cell-wrapper"
    >
      <div
        className=""
        onClick={[Function]}
      >
        <span>
          Subject
        </span>
      </div>
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell sortable field cell 1`] = `
<td>
  <div>
    <div
      className="cell-wrapper"
    >
      <div
        className="clickable"
        onClick={[Function]}
      >
        <span>
          Created
        </span>
        <i
          className="fa fa-fw fa-sort"
        />
      </div>
    </div>
  </div>
</td>
`;
